# scythe-demos

./: .gitignore  CMakeLists.txt  LICENSE  makefile
anchor/: makefile
anchor/src/: anchor_main.cpp
atmospheric_scattering/: CMakeLists.txt  makefile
atmospheric_scattering/src/: atmospheric_scattering.cpp  constants.h
cascaded_shadows/: CMakeLists.txt  makefile
cascaded_shadows/src/: main.cpp
data/shaders/: blur.fs  gui_colored.fs  gui_colored.vs  gui_textured.fs  gui_textured.vs  outlined_text.vs  skybox.fs  skybox.vs  text.fs
data/shaders/anchor/: object.fs
data/shaders/atmosphere/: clouds.fs  ground.fs  ground.vs  sky.fs  sky.vs
data/shaders/pbr/: integrate.fs  irradiance.fs  irradiance.vs  object_pbr.fs  object_pbr.vs  object_pbr_no_tb.fs  object_pbr_no_tb.vs  prefilter.fs  prefilter.vs
data/shaders/raytrace/: raytrace.fs  raytrace.vs
data/shaders/sandbox/: object.fs  object.vs
data/shaders/shadows/: depth_vsm.fs  depth_vsm.vs  object.fs  object_csm.fs  object_csm_vsm.fs  object_csm_vsm.vs  object_shadow.fs  object_shadow.vs  object_vsm.fs  object_vsm.vs
demos/AtmosphericScattering/: makefile
demos/AtmosphericScattering/src/: atmospheric_scattering.cpp
marble_maze/: CMakeLists.txt  makefile
marble_maze/src/: marble_maze_main.cpp  wall_data.cpp  wall_data.h
pbr/: CMakeLists.txt  makefile
pbr/src/: pbr_main.cpp
ray_trace/: CMakeLists.txt  makefile
ray_trace/src/: ray_trace_main.cpp
sandbox/: CMakeLists.txt  makefile
sandbox/src/: console.cpp  console.h  object.cpp  object.h  object_creator.h  parser.cpp  parser.h  sandbox_main.cpp
shadows/: CMakeLists.txt  makefile
shadows/src/: shadows_main.cpp
